<resources>
    <string name="app_name">Health App</string>
    <string name="gender">Gender:</string>
    <string name="button_main">Calculate BMR</string>
    <string name="activity2_name">activity_2</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="weight">Weight:</string>
    <string name="age">Age:</string>
    <string name="height_in">Height(in):</string>
    <string name="bmr_basal_metabolic_rate">BMR - Basal Metabolic Rate</string>
    <string name="lose">lose</string>
    <string name="gain">gain</string>
    <string name="get_suggestion">Get Suggestion</string>
    <string name="every_week">EVERY WEEK</string>
    <string name="goal">GOAL:</string>
    <string name="bmr">BMR:</string>
    <string name="you_need_to_consume">You need to consume</string>
    <string name="calories">calories</string>
    <string name="per_day">per day</string>
    <string name="Sample_Recipe">Sample Recipe:</string>
    <string name="calories_per_serving">Calories per Serving</string>
    <string name="daily_value">Daily Value</string>
    <string name="pounds">Pounds</string>
    <string name="lessormore">lessOrMore</string>
    <string name="calorietext">calorieText</string>
    <string-array name="loseOrgain">
        <item>Lose</item>
        <item>Gain</item>
    </string-array>
    <string-array name="weighttolose">
        <item>0.25 lbs</item>
        <item>0.5 lbs</item>
        <item>0.75 lbs</item>
        <item>1 lb</item>
        <item>1.25 lbs</item>
        <item>1.5 lbs</item>
    </string-array>
</resources>
